--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 
-    <h1 class="text-3xl font-bold underline"></h1>
+    <div class="m-5">
+        <h1 class="text-3xl font-bold underline">This is a test website for Cloudflare pages</h1>
+        <p>Later make an actual static site with transferred domain</p>
+    </div>
     
 </body>
 </html>
