--- a/index.html
+++ b/index.html
@@ -1,17 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testing Pages</title>
+    <title>Viisi Group &trade;</title>
+    <link rel="shortcut icon" href="img/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="/styles.css">
 </head>
+
 <body>
 
-    <div class="m-5">
-        <h1 class="text-3xl font-bold underline">This is a test website for Cloudflare pages</h1>
-        <p>Later make an actual static site with transferred domain</p>
-    </div>
-    
+    <body class="bg-gray-900">
+        <header>
+        </header>
+
+        <div class="relative pt-40 pb-20 lg:pt-44 bg-gray-900 flex flex-wrap justify-around">
+            <div class="relative container">
+                <h1
+                    class="sm:mx-auto sm:w-10/12 md:w-2/3   text-4xl text-center sm:text-5xl md:text-6xl lg:w-auto lg:text-left xl:text-7xl text-white">
+                    We are <br class="lg:block hidden"> <span
+                        class="relative font-black text-transparent bg-clip-text bg-gradient-to-r from-red-900 to-red-800">VIISI</span>
+                </h1>
+                <div class="lg:flex">
+                    <div
+                        class="relative mt-8 md:mt-16 space-y-8 sm:w-10/12 md:w-2/3 lg:ml-0 sm:mx-auto text-center lg:text-left lg:mr-auto lg:w-7/12">
+                        <p class="sm:text-lg text-gray-300 lg:w-11/12">
+                            Small write up about company
+                        </p>
+                        <span class="block font-semibold text-gray-500 dark:text-gray-400">Let's get in touch</span>
+                        <div class="grid grid-cols-3 space-x-4 md:space-x-6 md:flex md:justify-center lg:justify-start">
+                            <a aria-label="add to slack" href="https://api.whatsapp.com/send?phone=9607268666"
+                                class="p-4 border border-gray-200 dark:bg-gray-800 dark:border-gray-700 rounded-full duration-300 hover:border-cyan-400 hover:shadow-lg hover:shadow-cyan-600/20 dark:hover:border-cyan-300/30">
+                                <div class="flex justify-center space-x-4">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                        <path fill="white"
+                                            d="M12.001 2c5.523 0 10 4.477 10 10s-4.477 10-10 10a9.954 9.954 0 0 1-5.03-1.355L2.005 22l1.352-4.968A9.953 9.953 0 0 1 2.001 12c0-5.523 4.477-10 10-10ZM8.593 7.3l-.2.008a.961.961 0 0 0-.372.1a1.293 1.293 0 0 0-.294.228c-.12.113-.188.211-.261.306A2.73 2.73 0 0 0 6.9 9.62c.002.49.13.967.33 1.413c.409.902 1.082 1.857 1.97 2.742c.214.213.424.427.65.626a9.448 9.448 0 0 0 3.84 2.046l.568.087c.185.01.37-.004.556-.013a1.99 1.99 0 0 0 .833-.231a4.83 4.83 0 0 0 .383-.22s.043-.028.125-.09c.135-.1.218-.171.33-.288c.083-.086.155-.187.21-.302c.078-.163.156-.474.188-.733c.024-.198.017-.306.014-.373c-.004-.107-.093-.218-.19-.265l-.582-.261s-.87-.379-1.402-.621a.497.497 0 0 0-.176-.041a.482.482 0 0 0-.378.127c-.005-.002-.072.055-.795.931a.35.35 0 0 1-.368.13a1.43 1.43 0 0 1-.191-.066c-.124-.052-.167-.072-.252-.108a6.025 6.025 0 0 1-1.575-1.003c-.126-.11-.243-.23-.363-.346a6.297 6.297 0 0 1-1.02-1.268l-.059-.095a.923.923 0 0 1-.102-.205c-.038-.147.061-.265.061-.265s.243-.266.356-.41c.11-.14.203-.276.263-.373c.118-.19.155-.385.093-.536c-.28-.684-.57-1.365-.868-2.041c-.059-.134-.234-.23-.393-.249c-.054-.006-.108-.012-.162-.016a3.385 3.385 0 0 0-.403.004l.201-.008Z" />
+                                    </svg>
+                                    <span class="font-medium text-white">Whatsapp</span>
+                                </div>
+                            </a>
+                            <a aria-label="add to chat" href="mailto:info@viisigroup.com"
+                                class="p-4 border border-gray-200 dark:bg-gray-800  dark:border-gray-700 rounded-full duration-300 hover:border-green-400 hover:shadow-lg hover:shadow-lime-600/20 dark:hover:border-green-300/30">
+                                <div class="flex justify-center space-x-4">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                        <path fill="white"
+                                            d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6m-2 0l-8 5l-8-5h16m0 12H4V8l8 5l8-5v10Z" />
+                                    </svg>
+                                    <span class="font-medium text-white">Email</span>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- <div class="mt-12 md:mt-0 lg:absolute -right-10 lg:w-7/12">
+                        <div class="relative w-full">
+                            <div aria-hidden="true"
+                                class="absolute scale-75 md:scale-110 inset-0 m-auto w-full h-full md:w-96 md:h-96 rounded-full rotate-45 bg-gradient-to-r from-sky-500 to-cyan-300 blur-3xl">
+                            </div>
+                            <img src="/img/morphis-investment-profit-growth.png"
+                                class="relative w-full" alt="wath illustration" loading="lazy" width="320" height="280">
+                        </div>
+                    </div> -->
+                </div>
+            </div>
+
+
+        </div>
+    </body>
+
 </body>
+
 </html>
